--- a/bower.json
+++ b/bower.json
@@ -6,16 +6,17 @@
     "bootstrap": "^3.2.0",
     "angular-resource": "^1.3.0",
     "angular-route": "^1.5.0",
-    "angular-sanitize": "^1.3.0"
+    "angular-sanitize": "^1.3.0",
+    "moment": "~2.11.2"
   },
   "overrides": {
     "bootstrap": {
-        "main": [
-              "dist/js/bootstrap.js",
-              "dist/css/bootstrap.css",
-              "less/bootstrap.less"
-            ]
-      }
+      "main": [
+        "dist/js/bootstrap.js",
+        "dist/css/bootstrap.css",
+        "less/bootstrap.less"
+      ]
+    }
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
