--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-resource": "^1.3.0",
     "angular-route": "^1.5.0",
     "angular-sanitize": "^1.3.0",
-    "moment": "~2.11.2"
+    "moment": "~2.11.2",
+    "underscore": "~1.8.3",
   },
   "overrides": {
     "bootstrap": {
