--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,8 @@
     "angular-route": "^1.5.0",
     "angular-sanitize": "^1.3.0",
     "moment": "~2.11.2",
-    "underscore": "~1.8.3",
-    "ngstorage": "~0.3.10"
+    "ngstorage": "~0.3.10",
+    "lodash": "~4.5.0"
   },
   "overrides": {
     "bootstrap": {
