--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "dependencies": {
     "archiver": "^0.21.0",
     "async": "~0.2.10",
+    "bcrypt": "^0.8.5",
     "deluge": "1.7.0",
     "directory-tree": "^0.1.1",
     "diskspace": "^1.0.2",
     "express": "3.4.4",
     "jasmine-core": "^2.4.1",
+    "jsonwebtoken": "^5.7.0",
     "karma": "^0.13.19",
     "lodash": "^4.1.0",
     "log4js": "0.6.x",
+    "mongoose": "^4.4.4",
+    "mongoose-unique-validator": "^1.0.1",
     "node-deluge": "1.0.1",
     "phantomjs": "^1.9.19",
     "request": "2.51.x",
